--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "buefy": "^0.4.2",
     "vue": "^2.3.3",
     "vuex": "^2.3.1"
   },
